--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,22 @@
 body {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+header {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   background: #333;
   color: #fff;
-  margin: 0;
+  height: 100px;
+  h3 {
+    flex-basis: 50%;
+  }
+}
+
+.movie-container {
+  width: 400px;
+  margin: 50px auto;
 }
